# snake-machine-learning

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/docs-template/: index.html
.github/workflows/: deploy-to-page.yml  deploy.yml
src/: __init__.py  app.py  main.py  main_original.py  pyproject.toml  q_learning_agent.py  snake_agent.pkl  snake_env.py  snake_environment.py  test_installation.py  test_system.py  train_cli.py  trainer.py  visualizer.py
